--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
+    "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "sass-loader": "^9.0.2",
     "url-loader": "^4.1.0",
     "webpack": "^4.44.1",
